Fixed multiple carousel coexistence, margins and image cropping

--- a/src/assets/css/images-carousel.css
+++ b/src/assets/css/images-carousel.css
@@ -26,6 +26,7 @@
     height: 64vmin;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center center;
 }
 
 .leaving {
